--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,8 +1,9 @@
 project:
   type: website
+  output-dir: docs
 
 website:
-  title: "temp_website"
+  title: "personal_website"
   navbar:
     left:
       - href: index.qmd
